--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "Shopeasee",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://your-netlify-site-name.netlify.app/shopeasee",
+  "homepage": "https://your-netlify-site-name.netlify.app/shopeasee",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -40,6 +40,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-private-property-in-object": "^7.25.8"
+    "@babel/plugin-transform-private-property-in-object": "^7.25.8",
+    "cross-env": "^7.0.3"
   }
 }
